// Prisma Schema für DS-Projektplanungstool (überarbeitet)
// Basierend auf "Template for Describing DS-Projects" (32 Felder)
// Datenbank: PostgreSQL (Cloud SQL)

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ========================================
// 2. PROJECT (Hauptentität)
// ========================================

model Project {
  id Int @id @default(autoincrement())

  // Template 0.x - General
  title  String
  domain String?

  // Wizard Tracking
  wizardStep      Int     @default(0) // 0=Start, 1=Business, 2=Data, 3=Analysis, 4=Deployment, 5=Utilization, 6=Complete
  wizardCompleted Boolean @default(false)

  // Status
  status    ProjectStatus @default(PLANNING)
  startDate DateTime?
  endDate   DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relationen
  businessUnderstanding BusinessUnderstanding?
  dataCharacteristics   DataCharacteristics?
  analysisConfig        AnalysisConfig?
  deploymentConfig      DeploymentConfig?
  utilizationConfig     UtilizationConfig?
  projectPlan           ProjectPlan?
  evaluations           ProjectEvaluation[]
  ProjectCategory       ProjectCategory?       @relation(fields: [projectCategoryId], references: [id], onDelete: SetNull)
  projectCategoryId     Int?

  // Index für schnelle Sortierung auf dem Dashboard (Zuletzt bearbeitet)
  @@index([updatedAt])
  // Index für Filterung nach Status
  @@index([status])
  @@map("projects")
}

enum ProjectStatus {
  PLANNING
  IN_PROGRESS
  ON_HOLD
  COMPLETED
  CANCELLED
}

model ProjectCategory {
  id        Int      @id @default(autoincrement())
  name      String   @unique
  color     String // z.B. "#FF5733" oder "blue"
  createdAt DateTime @default(now())

  // Relationen
  projects Project[] // Eine Kategorie kann viele Projekte haben
}

// ========================================
// 3. BUSINESS UNDERSTANDING (Template 1.x)
// ========================================

model BusinessUnderstanding {
  id        Int     @id @default(autoincrement())
  projectId Int     @unique
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // 1.1 Business Goal
  businessGoal String?

  // 1.2 Form of Final Product
  formOfFinalProduct FormOfFinalProduct?

  // 1.3 Project Team Roles
  projectTeamRoles TeamRole[]

  // 1.4 Team Size
  teamSize Int?

  // 1.5 Timeline (in Monaten/Wochen)
  timelineValue Int?
  timelineUnit  TimelineUnit @default(WEEKS)

  // 1.6 Cost
  estimatedCost Float?

  // 1.7 Tools - Business Understanding
  toolsBusinessUnderstanding String?

  // Phase Status
  status      TemplatePhaseStatus @default(DRAFT)
  completedAt DateTime?

  @@map("business_understanding")
}

enum FormOfFinalProduct {
  REPORT // Bericht/Dashboard
  APPLICATION_SOFTWARE // ML-Anwendung
  OTHER
}

enum TimelineUnit {
  DAYS
  WEEKS
  MONTHS
}

enum TeamRole {
  DATA_SCIENTIST
  DATA_ENGINEER
  PROJECT_MANAGER
  DOMAIN_EXPERT
  BUSINESS_ANALYST
  IT_INFRASTRUCTURE
  ML_ENGINEER
}

// ========================================
// 4. DATA CHARACTERISTICS (Template 2.x)
// ========================================

model DataCharacteristics {
  id        Int     @id @default(autoincrement())
  projectId Int     @unique
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // 2.1 Data Access
  dataAccess DataAccessType[]

  // 2.2 Data Availability
  dataAvailability Boolean?

  // 2.3 Data Sources
  dataSources String[] // z.B. ["Sensors", "Web", "Database"]

  // 2.4 Data Security and Privacy Constraints
  dataSecurityConstraints String?

  // 2.5 Velocity
  velocity DataVelocity?

  // 2.6 Veracity (Data Quality)
  veracity DataVeracity? // Rating

  // 2.7 Variety
  variety DataVariety?

  // 2.8 Volume
  volumeValue Float?
  volumeUnit  VolumeUnit @default(RECORDS) // Records, GB, TB, etc.

  // 2.9 Variability
  variability DataVariability? // z.B. "Never", "Weekly", "Daily"

  // 2.10 Data Preparation Steps
  dataPreparationSteps DataPreparationStep[] @default([]) // z.B. ["Joins", "Deduplication", "Outlier Detection"]

  // 2.11 Tools - Data
  toolsData String?

  // Phase Status
  status      TemplatePhaseStatus @default(BLOCKED)
  completedAt DateTime?

  updatedAt DateTime @updatedAt

  @@map("data_characteristics")
}

enum DataVariability {
  NEVER
  YEARLY
  MONTHLY
  WEEKLY
  DAILY
  HOURLY
}

enum DataVeracity {
  POOR
  MEDIUM
  GOOD
  EXCELLENT
}

enum DataAccessType {
  INTERNAL
  EXTERNAL
  HYBRID
}

enum DataVelocity {
  BATCH // Keine Echtzeit
  DAILY
  HOURLY
  CONTINUOUS // Echtzeit/Streaming
}

enum DataVariety {
  LOW // Nur eine Datentyp
  MEDIUM // Zwei Datentypen
  HIGH // Alle Datentypen (strukturiert, unstrukturiert, semi-strukturiert)
}

enum VolumeUnit {
  RECORDS
  GB
  TB
  PB
  MB
  KB
}

enum DataPreparationStep {
  JOINS
  DEDUPLICATION
  OUTLIER_DETECTION
  NORMALIZATION
  MISSING_VALUE_IMPUTATION
  FEATURE_ENGINEERING
  ONE_HOT_ENCODING
  DATA_CLEANING
  TRANSFORMATION
}

// ========================================
// 5. ANALYSIS CONFIG (Template 3.x)
// ========================================

model AnalysisConfig {
  id        Int     @id @default(autoincrement())
  projectId Int     @unique
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // 3.1 Data Science Goals
  dataScienceGoals String?

  // 3.2 Type of Analytics
  typeOfAnalytics AnalyticsType?

  // 3.3 Evaluation Metrics
  evaluationMetrics String[]

  // 3.4 Tools - Analysis
  toolsAnalysis String?

  updatedAt   DateTime            @updatedAt
  // Phase Status
  status      TemplatePhaseStatus @default(BLOCKED)
  completedAt DateTime?

  @@map("analysis_config")
}

enum AnalyticsType {
  CLASSIFICATION
  REGRESSION
  CLUSTERING
  ANOMALY_DETECTION
  TIME_SERIES_FORECASTING
  RECOMMENDATION
  ASSOCIATION_RULE_LEARNING
  OTHER
}

// ========================================
// 6. DEPLOYMENT CONFIG (Template 4.x)
// ========================================

model DeploymentConfig {
  id        Int     @id @default(autoincrement())
  projectId Int     @unique
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // 4.1 Timeliness of Analytics
  timelinessOfAnalytics TimelinessLevel?

  // 4.2 Addressed Users
  addressedUsers String? // Beschreibung der Nutzer

  // 4.3 Tests
  tests String? // Beschreibung durchgeführter Tests

  // 4.4 Project Issues
  projectIssues ProjectIssueType[]

  // 4.5 Tools - Deployment
  toolsDeployment String?

  // Phase Status
  status      TemplatePhaseStatus @default(BLOCKED)
  completedAt DateTime?

  @@map("deployment_config")
}

enum TimelinessLevel {
  BATCH // Keine Echtzeit
  DAILY
  NEARREALTIME // Minuten
  REALTIME // Sekunden
}

enum ProjectIssueType {
  DATA_ACCESS
  DATA_QUALITY
  INSUFFICIENT_RESOURCES
  UNCLEAR_REQUIREMENTS
  TECHNICAL_COMPLEXITY
  TIMELINE_CONSTRAINTS
  TEAM_COORDINATION
}

// ========================================
// 7. UTILIZATION CONFIG (Template 5.x)
// ========================================

model UtilizationConfig {
  id        Int     @id @default(autoincrement())
  projectId Int     @unique
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // 5.1 Monitoring
  monitoring String?

  // 5.2 Maintenance
  maintenance String?

  // 5.3 Tools - Utilization
  toolsUtilization String?

  // Phase Status
  status      TemplatePhaseStatus @default(BLOCKED)
  completedAt DateTime?

  @@map("utilization_config")
}

// ========================================
// 8. PROJECT EVALUATION (Bewertungen)
// ========================================

model ProjectEvaluation {
  id        Int     @id @default(autoincrement())
  projectId Int
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // Kategorien von Planning Engine verwendet
  category String // z.B. "Complexity", "Data Quality", "Team Experience", "Timeliness"
  rating   Int // 1-5 Skala
  notes    String?

  createdAt DateTime @default(now())

  @@map("project_evaluations")
}

// ========================================
// 9. PROJECT PLAN (Planning Engine Output)
// ========================================

model ProjectPlan {
  id        Int     @id @default(autoincrement())
  projectId Int     @unique
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  // Planning Engine Berechnungen
  estimatedDuration    Int? // Gesamtdauer in Tagen
  estimatedEffort      Float? // Gesamtaufwand in Person-Tagen
  calculatedComplexity Float? // 0-100 Komplexitätsscore
  bufferPercentage     Int    @default(15)

  // Phasengewichtung
  phaseWeights Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relationen
  phases       ProjectPhase[]
  tasks        PhaseSteps[]
  dependencies PhaseTaskDependency[]

  @@map("project_plans")
}

// ========================================
// 10. PROJECT PHASES (CRISP-DM/DSLC)
// ========================================

model ProjectPhase {
  id            Int         @id @default(autoincrement())
  projectPlanId Int
  projectPlan   ProjectPlan @relation(fields: [projectPlanId], references: [id], onDelete: Cascade)

  name        String
  phaseType   PhaseType
  description String?
  orderIndex  Int // 1=Business Understanding, 2=Data Collection, etc.

  estimatedDuration Int? // in Tagen (Gesamt)
  estimatedEffort   Float? // in Person-Wochen (Gesamt)

  // NEU: Puffer-Tracking für Gantt-Visualisierung
  baseEffort     Float? // Basis-Aufwand in Person-Wochen
  bufferEffort   Float? // Puffer-Aufwand in Person-Wochen
  baseDuration   Int? // Basis-Dauer in Tagen
  bufferDuration Int? // Puffer-Dauer in Tagen

  startDate DateTime?
  endDate   DateTime?

  createdAt DateTime @default(now())

  // Relationen
  tasks PhaseSteps[]

  @@unique([projectPlanId, orderIndex])
  @@map("project_phases")
}

enum TemplatePhaseStatus {
  BLOCKED // Kann nicht bearbeitet werden (abhängig von vorherigen)
  READY // Kann bearbeitet werden
  DRAFT // Wurde gestartet
  COMPLETED // Vollständig abgeschlossen
}

enum PhaseType {
  BUSINESS_UNDERSTANDING
  DATA_COLLECTION_EXPLORATION_PREPARATION
  ANALYSIS_MODELING
  EVALUATION
  DEPLOYMENT
  UTILIZATION
}

// ========================================
// 11. TASKS (0.1 .. - 5.3 aus Paper)
// ========================================

model PhaseSteps {
  id            Int         @id @default(autoincrement())
  projectPlanId Int
  projectPlan   ProjectPlan @relation(fields: [projectPlanId], references: [id], onDelete: Cascade)

  phaseId Int
  phase   ProjectPhase? @relation(fields: [phaseId], references: [id], onDelete: Restrict)

  // Standard Task Type aus Template ODER Custom Task
  taskType TaskType @default(CUSTOM)

  // Nur bei Custom Tasks gefüllt
  customTitle String?

  // Derived Title (automatisch generiert aus Enum)
  title       String? // z.B. "Define Business Goal"
  description String?
  status      TaskStatus @default(TODO)

  estimatedDuration Int? // in Tagen
  estimatedEffort   Float? // in Person-Tagen
  startDate         DateTime?
  endDate           DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relationen
  dependenciesFrom PhaseTaskDependency[] @relation("FromTask")
  dependenciesTo   PhaseTaskDependency[] @relation("ToTask")

  @@index([projectPlanId, taskType])
  @@index([phaseId])
  @@map("tasks")
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  BLOCKED
  DONE
}

// Task Enum
enum TaskType {
  // ========== BUSINESS UNDERSTANDING ==========
  ASSESS_SITUATION
  COMPOSE_PROJECT_TEAM
  SET_BUSINESS_OBJECTIVES
  DERIVE_DATA_SCIENCE_TARGETS
  CREATE_PROJECT_PLAN

  // ========== DATA COLLECTION, EXPLORATION & PREPARATION ==========
  IDENTIFY_DATA_SOURCES
  ACQUIRE_DATA
  DESCRIBE_DATA
  EXPLORE_DATA
  ASSESS_DATA_QUALITY
  PREPARE_DATA
  DEVELOP_DATA_PIPELINE

  // ========== MODELING/ANALYSIS ==========
  DEFINE_HYPOTHESIS
  SELECT_ANALYTICAL_MODEL
  DESIGN_TEST_FOR_ANALYTICAL_MODEL
  DEVELOP_ANALYTICAL_MODEL
  ASSESS_ANALYTICAL_MODEL
  DEVELOP_ANALYTICAL_PIPELINE

  // ========== EVALUATION ==========
  ASSESS_ANALYTICAL_RESULTS
  EVALUATE_PROCESS
  PERFORM_CHECKPOINT_DECISION

  // ========== DEPLOYMENT ==========
  PERFORM_IMPACT_ASSESSMENT
  PLAN_DEPLOYMENT
  PLAN_MONITORING_AND_MAINTENANCE
  TEST_DEPLOYMENT
  PERFORM_BUSINESS_INTEGRATION
  FINALIZE_PROJECT

  // ========== UTILIZATION ==========
  MONITOR_MODEL_PERFORMANCE
  MAINTAIN_DATA_PIPELINE
  UPDATE_MODEL

  // Legacy/Fallback
  CUSTOM
}

model PhaseTaskDependency {
  id            Int         @id @default(autoincrement())
  projectPlanId Int
  projectPlan   ProjectPlan @relation(fields: [projectPlanId], references: [id], onDelete: Cascade)

  fromTaskId Int
  fromTask   PhaseSteps @relation("FromTask", fields: [fromTaskId], references: [id], onDelete: Cascade)

  toTaskId Int
  toTask   PhaseSteps @relation("ToTask", fields: [toTaskId], references: [id], onDelete: Cascade)

  dependencyType DependencyType @default(FINISH_TO_START)
  lag            Int            @default(0)

  createdAt DateTime @default(now())

  @@unique([fromTaskId, toTaskId])
  @@map("task_dependencies")
}

enum DependencyType {
  FINISH_TO_START
  START_TO_START
  FINISH_TO_FINISH
  START_TO_FINISH
}

model WeightsSettings {
  id        Int      @id @default(1)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  defaultWeights  DefaultWeights?
  businessTasks   BusinessUnderstandingTask?
  dataTasks       DataTasks?
  analysisTasks   AnalysisTask?
  evaluationTasks EvaluationTask?
  deploymentTasks DeploymentTask?
  productivity    Productivity?
  cost            Cost?
}

model DefaultWeights {
  id         Int             @id @default(autoincrement())
  settingsId Int             @unique
  settings   WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)

  data_access            Float
  data_availability      Float
  stakeholder_support    Float
  tools_available        Float
  data_variety           Float
  data_velocity          Float
  num_sources            Float
  analytics_type         Float
  data_quality           Float
  privacy_concerns       Float
  missing_data           Float
  goal_clarity           Float
  data_volume_complexity Float
  data_prep_complexity   Float
  product_complexity     Float
}

model BusinessUnderstandingTask {
  id         Int             @id @default(autoincrement())
  settingsId Int             @unique
  settings   WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)

  assess_situation        Float
  create_project_plan     Float
  compose_team            Float
  set_criteria_objectives Float
  derive_targets          Float
}

model DataTasks {
  id         Int             @id @default(autoincrement())
  settingsId Int             @unique
  settings   WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)

  identify_sources   Float
  acquire_data       Float
  describe_data      Float
  explore_data       Float
  asses_data_quality Float
  prepare_data       Float
  develop_pipeline   Float
}

model AnalysisTask {
  id         Int             @id @default(autoincrement())
  settingsId Int             @unique
  settings   WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)

  define_hypothesis Float
  select_model      Float
  design_test       Float
  develop_model     Float
  assess_model      Float
  develop_pipeline  Float
}

model EvaluationTask {
  id         Int             @id @default(autoincrement())
  settingsId Int             @unique
  settings   WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)

  assess_results              Float
  evaluate_process            Float
  perform_checkpoint_decision Float
}

model DeploymentTask {
  id         Int             @id @default(autoincrement())
  settingsId Int             @unique
  settings   WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)

  perform_assessment          Float
  plan_deployment             Float
  plan_monitoring_maintenance Float
  test_deployment             Float
  perform_integration         Float
  finalize_project            Float
}

model Productivity {
  id           Int             @id @default(autoincrement())
  settingsId   Int             @unique
  productivity Float
  settings     WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)
}

model Cost {
  id          Int             @id @default(autoincrement())
  settingsId  Int             @unique
  hourly_rate Float
  settings    WeightsSettings @relation(fields: [settingsId], references: [id], onDelete: Cascade)
}
