@startuml DS-Projektplanungstool-ER-Schema

!define PRIMARY_KEY(x) <u>x</u>
!define FOREIGN_KEY(x) <i>x</i>

skinparam linetype ortho
skinparam backgroundColor #FEFEFE

entity "Project" as project {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectCategoryId) : Int?
  --
  title : String
  domain : String?
  wizardStep : Int
  wizardCompleted : Boolean
  status : ProjectStatus
  startDate : DateTime?
  endDate : DateTime?
  createdAt : DateTime
  updatedAt : DateTime
}

entity "ProjectCategory" as projectCategory {
  PRIMARY_KEY(id) : Int
  --
  name : String
  color : String
  createdAt : DateTime
}

entity "BusinessUnderstanding" as business {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  businessGoal : String?
  formOfFinalProduct : FormOfFinalProduct?
  projectTeamRoles : TeamRole[]
  teamSize : Int?
  timelineValue : Int?
  timelineUnit : TimelineUnit
  estimatedCost : Float?
  toolsBusinessUnderstanding : String?
  status : TemplatePhaseStatus
  completedAt : DateTime?
}

entity "DataCharacteristics" as data {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  dataAccess : DataAccessType[]
  dataAvailability : Boolean?
  dataSources : String[]
  dataSecurityConstraints : String?
  velocity : DataVelocity?
  veracity : DataVeracity?
  variety : DataVariety?
  volumeValue : Float?
  volumeUnit : VolumeUnit
  variability : DataVariability?
  dataPreparationSteps : DataPreparationStep[]
  toolsData : String?
  status : TemplatePhaseStatus
  completedAt : DateTime?
  updatedAt : DateTime
}

entity "AnalysisConfig" as analysis {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  dataScienceGoals : String?
  typeOfAnalytics : AnalyticsType?
  evaluationMetrics : String[]
  toolsAnalysis : String?
  status : TemplatePhaseStatus
  completedAt : DateTime?
  updatedAt : DateTime
}

entity "DeploymentConfig" as deployment {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  timelinessOfAnalytics : TimelinessLevel?
  addressedUsers : String?
  tests : String?
  projectIssues : ProjectIssueType[]
  toolsDeployment : String?
  status : TemplatePhaseStatus
  completedAt : DateTime?
}

entity "UtilizationConfig" as utilization {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  monitoring : String?
  maintenance : String?
  toolsUtilization : String?
  status : TemplatePhaseStatus
  completedAt : DateTime?
}

entity "ProjectPlan" as plan {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  estimatedDuration : Int?
  estimatedEffort : Float?
  calculatedComplexity : Float?
  bufferPercentage : Int
  phaseWeights : Json?
  createdAt : DateTime
  updatedAt : DateTime
}

entity "ProjectPhase" as phase {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectPlanId) : Int
  --
  name : String
  phaseType : PhaseType
  description : String?
  orderIndex : Int
  estimatedDuration : Int?
  estimatedEffort : Float?
  baseEffort : Float?
  bufferEffort : Float?
  baseDuration : Int?
  bufferDuration : Int?
  startDate : DateTime?
  endDate : DateTime?
  createdAt : DateTime
}

entity "PhaseSteps" as task {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectPlanId) : Int
  FOREIGN_KEY(phaseId) : Int
  --
  taskType : TaskType
  customTitle : String?
  title : String?
  description : String?
  status : TaskStatus
  estimatedDuration : Int?
  estimatedEffort : Float?
  startDate : DateTime?
  endDate : DateTime?
  createdAt : DateTime
  updatedAt : DateTime
}

entity "PhaseTaskDependency" as dependency {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectPlanId) : Int
  FOREIGN_KEY(fromTaskId) : Int
  FOREIGN_KEY(toTaskId) : Int
  --
  dependencyType : DependencyType
  lag : Int
  createdAt : DateTime
}

entity "ProjectEvaluation" as evaluation {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(projectId) : Int
  --
  category : String
  rating : Int
  notes : String?
  createdAt : DateTime
}

entity "WeightsSettings" as weightsSettings {
  PRIMARY_KEY(id) : Int
  --
  createdAt : DateTime
  updatedAt : DateTime
}

entity "DefaultWeights" as defaultWeights {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  data_access : Float
  data_availability : Float
  stakeholder_support : Float
  tools_available : Float
  data_variety : Float
  data_velocity : Float
  num_sources : Float
  analytics_type : Float
  data_quality : Float
  privacy_concerns : Float
  missing_data : Float
  goal_clarity : Float
  data_volume_complexity : Float
  data_prep_complexity : Float
  product_complexity : Float
}

entity "BusinessUnderstandingTask" as businessTasks {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  assess_situation : Float
  create_project_plan : Float
  compose_team : Float
  set_criteria_objectives : Float
  derive_targets : Float
}

entity "DataTasks" as dataTasks {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  identify_sources : Float
  acquire_data : Float
  describe_data : Float
  explore_data : Float
  asses_data_quality : Float
  prepare_data : Float
  develop_pipeline : Float
}

entity "AnalysisTask" as analysisTasks {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  define_hypothesis : Float
  select_model : Float
  design_test : Float
  develop_model : Float
  assess_model : Float
  develop_pipeline : Float
}

entity "EvaluationTask" as evaluationTasks {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  assess_results : Float
  evaluate_process : Float
  perform_checkpoint_decision : Float
}

entity "DeploymentTask" as deploymentTasks {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  perform_assessment : Float
  plan_deployment : Float
  plan_monitoring_maintenance : Float
  test_deployment : Float
  perform_integration : Float
  finalize_project : Float
}

entity "Productivity" as productivity {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  productivity : Float
}

entity "Cost" as cost {
  PRIMARY_KEY(id) : Int
  FOREIGN_KEY(settingsId) : Int
  --
  hourly_rate : Float
}

' Relationships mit Kardinalitäten [min,max]
projectCategory "[0,1]" -- "[0,*]" project

project "[1,1]" -- "[0,1]" business
project "[1,1]" -- "[0,1]" data
project "[1,1]" -- "[0,1]" analysis
project "[1,1]" -- "[0,1]" deployment
project "[1,1]" -- "[0,1]" utilization
project "[1,1]" -- "[0,1]" plan
project "[1,1]" -- "[0,*]" evaluation

plan "[1,1]" -- "[0,*]" phase
plan "[1,1]" -- "[0,*]" task
plan "[1,1]" -- "[0,*]" dependency

phase "[1,1]" -- "[0,*]" task

task "[1,1]" -- "[0,*]" dependency : fromTask
task "[1,1]" -- "[0,*]" dependency : toTask

weightsSettings "[1,1]" -- "[0,1]" defaultWeights
weightsSettings "[1,1]" -- "[0,1]" businessTasks
weightsSettings "[1,1]" -- "[0,1]" dataTasks
weightsSettings "[1,1]" -- "[0,1]" analysisTasks
weightsSettings "[1,1]" -- "[0,1]" evaluationTasks
weightsSettings "[1,1]" -- "[0,1]" deploymentTasks
weightsSettings "[1,1]" -- "[0,1]" productivity
weightsSettings "[1,1]" -- "[0,1]" cost

@enduml
